--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <div class="todoapp" id="root">
     </div>
     <script src="/static/bundle.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </body>
 </html>
